# gpt-website

./: .gitignore  README.md  db.sqlite3  pyproject.toml  run.sh
learn/tests/: test_decorator.py  test_decorator1_base.py  test_decorator_django.py  test_function_and_method.py  test_pandas.py  test_random.py  test_time.py  test_zzz_just_test.py
learn/tests/cookie/: test_browser_cookie3.py
learn/tests/data/: test_dict.py  test_pygwalker.py  test_pygwalker2.py
learn/tests/decode/: test_base64.py  test_decode.py
learn/tests/lang/: test_build.py  test_decorator2_with_param.py  test_decorator3_django.py  test_lang1.py  test_param.py  test_range.py  test_scop.py  test_time.py  test_uuid.py  test_yeild.py
learn/tests/llm/: test.py
learn/tests/md/: test_.py
learn/tests/safecode/: test_RestrictedPython.py
learn/tests/security/: test_jwt.py
learn/tests/time/: test_time.py
marathon/: apps.py  tests.py  views.py
marathon/templates/marathon/: my_marathon.html
see_log/: apps.py  views.py
see_log/templates/see_log/: app_log_table.html  home.html  ivr_log.html  ivr_logs.html  log_table.html  recent_log_stat.html
static/: manifest.json
templates/: heme_backup1.html  home.html
website/: settings.py  urls.py
