[tool.poetry]
name = "gpt-website"
version = "0.1.0"
description = "gpengtao's website by python"
authors = ["pengtao.geng <pengtao.geng>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
django = "^5.1.4"
restrictedpython = "^8.0"
pandas = "^2.2.3"
pygwalker = "^0.4.9.15"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
anthropic = "^0.50.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
